sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/NotinstanceofExpression.sand
pub class NotinstanceofExpression {
    foo() {
        [
            x() notinstanceof Foo,
            x() notinstanceof Foo[],
            x() notinstanceof Foo[][],
            x() notinstanceof Foo[][][],

            x() notinstanceof Foo?,
            x() notinstanceof Foo[]?,
            x() notinstanceof Foo[][]?,
            x() notinstanceof Foo[][][]?,
        ]
    }
}