sandc/test/fixtures/astRegression/shouldFail/productions/isnotExpression/List.sand
pub class List {
    foo() {
        x() isnot Foo[+]
    }
}